Closed Bug 715678 Opened 12 years ago Closed 12 years ago

Fix indentation in gonk/nsWindow.cpp

Categories

(Core :: Widget, defect)

All
Gonk (Firefox OS)
defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: mwu, Assigned: mwu)

Details

Attachments

(1 file)

Attached patch Fix indentationSplinter Review
      No description provided.
Attachment #586235 - Flags: review?(jones.chris.g)
Attachment #586235 - Flags: review?(jones.chris.g) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/bdce0ad479d7
Target Milestone: --- → mozilla12
https://hg.mozilla.org/mozilla-central/rev/bdce0ad479d7
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: