Bug 715678 - Fix indentation in gonk/nsWindow.cpp, r=cjones